--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   dio: ^5.7.0
   dartz: ^0.10.1
   flutter_bloc: ^9.0.0
-  json_annotation: ^4.9.0
   cached_network_image: ^3.4.1
 
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: true
+#  ios: true
+  image_path: "assets/app_icon.jpg"
+  min_sdk_android: 21
   flutter_test:
     sdk: flutter
 
@@ -51,8 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
