--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,6 @@ flutter {
     source = "../.."
 }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-}
+//dependencies {
+//    implementation 'androidx.appcompat:appcompat:1.4.0'
+//}
