--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   webview_flutter: ^4.10.0
+  flutter_native_splash: ^2.4.4
   dio: ^5.7.0
   dartz: ^0.10.1
   flutter_bloc: ^9.0.0
   cached_network_image: ^3.4.1
+  page_transition: ^2.2.1
 
 
 dev_dependencies:
