--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   cached_network_image: ^3.4.1
   page_transition: ^2.2.1
+  google_nav_bar: ^5.0.7
 
 
 dev_dependencies:
