--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   web_video_player: ^0.0.1-dev.2
   chewie: ^1.10.0
   flutter_inappwebview: ^6.1.5
+  sqflite: ^2.4.1
 
 
 dev_dependencies:
