--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   chewie: ^1.10.0
   flutter_inappwebview: ^6.1.5
   sqflite: ^2.4.1
+  url_launcher: ^6.3.1
+  shared_preferences: ^2.5.2
+  awesome_snackbar_content: ^0.1.1
 
 
 dev_dependencies:
