--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: ^6.3.1
   shared_preferences: ^2.5.2
   awesome_snackbar_content: ^0.1.1
+  flutter_staggered_animations: ^1.1.1
 
 
 dev_dependencies:
